[package]
name = "ekwensu"
version = "0.1.0"
authors = ["Ro Brett <ro.brett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
rants = '0.5.0'
nats = "0.7.4"
mongodb = "1.1.0"
dotenv = "0.15.0"
